Fix Vertical nav menu overlapping

--- a/menu.css
+++ b/menu.css
@@ -103,7 +103,6 @@ header{
     	display: block;
     	margin: 8px auto;
     	text-align: center;
-    	overflow: hidden;
         /* style the list items to remove the bullets 
         and line up vertically
         and take up 100% of the width of the ul */
